# NdkStudy

./: README.MD
AndroidCmake/: .project  settings.gradle
AndroidCmake/app/: .gitignore  README.md  build.gradle
AndroidCmake/app/src/androidTest/java/com/androidcmake/example/: ExampleInstrumentedTest.java
AndroidCmake/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidCmake/app/src/main/java/com/androidcmake/example/: MainActivity.java
AndroidCmake/app/src/main/res/values/: strings.xml
AndroidCmake/app2/: build.gradle
AndroidCmake/app2/src/main/cpp/: CMakeLists.txt  native-lib2.cpp
AndroidCmake/app2/src/main/java/com/androidcmake/example/: MainActivity.java
AndroidCmake/app3_A/: .project  build.gradle
AndroidCmake/app3_A/src/main/cpp/: CMakeLists.txt  hello-libs.cpp
AndroidCmake/app3_A/src/main/java/com/androidcmake/example/: MainActivity.java  NdkUtils.java
AndroidCmake/app3_A/src/main/res/values/: strings.xml
AndroidCmake/app3_B/: .project  build.gradle
AndroidCmake/app3_B/src/main/: AndroidManifest.xml
AndroidCmake/app3_B/src/main/cpp/: CMakeLists.txt
AndroidCmake/app3_B/src/main/cpp/gmath/: CMakeLists.txt
AndroidCmake/app3_B/src/main/cpp/gmath/src/: gmath.c  gmath.h
AndroidCmake/app3_B/src/main/cpp/gperf/: CMakeLists.txt
AndroidCmake/app3_B/src/main/cpp/gperf/src/: gperf.c
AndroidCmake/app3_B/src/main/java/com/androidcmake/example/: MainActivity.java
AndroidCmake/app3_B/src/main/res/values/: strings.xml
AndroidCmake/app3_B/src/test/java/com/androidcmake/example/: ExampleUnitTest.java
AndroidCmake/app3_C/gperf/include/: gperf.h
AndroidCmake/gradle/wrapper/: gradle-wrapper.properties
AndroidJni/: README.MD  build.gradle
AndroidJni/app/: build.gradle
AndroidJni/app/src/androidTest/java/com/example/androidjni/: ExampleInstrumentedTest.java
AndroidJni/app/src/main/: AndroidManifest.xml
AndroidJni/app/src/main/cpp/: CMakeLists.txt  native-lib-array.cpp  native-lib-exception.cpp  native-lib-method.cpp  native-lib-reference.cpp  native-lib-thread.cpp  native-lib.cpp
AndroidJni/app/src/main/java/com/example/androidjni/: MainActivity.java  MyApplication.java  MyHandler.java
AndroidJni/app/src/main/java/com/example/androidjni/bean/: Animal.java  Cat.java  Hello.java
AndroidJni/app/src/main/java/com/example/androidjni/operaitons/: ArrayOperationActivity.java  ExceptionOperationActivity.java  MethodOperationActivity.java  ReferenceOperationActivity.java  ThreadOperationActivity.java
AndroidJni/app/src/main/res/drawable/: ic_launcher_background.xml
AndroidJni/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
AndroidJni/app/src/main/res/layout/: activity_main.xml  activity_main2.xml
AndroidJni/app/src/main/res/values/: strings.xml
AndroidJni/app/src/test/java/com/example/androidjni/: ExampleUnitTest.java
AndroidJni/gradle/wrapper/: gradle-wrapper.properties
AndroidMk/: gradle.properties  settings.gradle
AndroidMk/app/: build.gradle
AndroidMk/app/src/androidTest/java/com/androidmk/example/: ExampleInstrumentedTest.java
AndroidMk/app/src/main/: AndroidManifest.xml
AndroidMk/app/src/main/java/com/androidmk/example/: MainActivity.java
AndroidMk/app/src/main/jni/: Android.mk  Application.mk  head.h  hello-jni.c  mul.c  sub.c
AndroidMk/app/src/main/ndkBuild/: add.c  hello-jni.c  mul.c
AndroidMk/app/src/main/res/values/: strings.xml
AndroidMk/app/src/test/java/com/androidmk/example/: ExampleUnitTest.java
AndroidMk/gradle/wrapper/: gradle-wrapper.properties
GlideNativeGif/: README.MD  settings.gradle
GlideNativeGif/app/: build.gradle
GlideNativeGif/app/src/androidTest/java/com/gif/example/: ExampleInstrumentedTest.java
GlideNativeGif/app/src/main/: AndroidManifest.xml
GlideNativeGif/app/src/main/cpp/: CMakeLists.txt  FrameSequenceJNI.cpp
GlideNativeGif/app/src/main/java/com/gif/example/: MainActivity.java
GlideNativeGif/app/src/main/res/values/: strings.xml
GlideNativeGif/app/src/test/java/com/gif/example/: ExampleUnitTest.java
GlideNativeGif/glideGif/: build.gradle
GlideNativeGif/glideGif/src/androidTest/java/com/gif/glidegif/: ExampleInstrumentedTest.java
GlideNativeGif/glideGif/src/main/: AndroidManifest.xml
GlideNativeGif/glideGif/src/main/java/com/gif/glidegif/: MainActivity.java
GlideNativeGif/glideGif/src/main/java/com/gif/glidegif/glide/: FsGifDecoder.java  FsGifExtension.java  FsGifResource.java  GifGlideModule.java
GlideNativeGif/glideGif/src/main/res/layout/: activity_main.xml
GlideNativeGif/glideGif/src/main/res/values/: strings.xml
GlideNativeGif/glideGif/src/test/java/com/gif/glidegif/: ExampleUnitTest.java
GlideNativeGif/gradle/wrapper/: gradle-wrapper.properties
